<?xml version="1.0"?>
<!--
  ~ /*
  ~  * Copyright memiiso Authors.
  ~  *
  ~  * Licensed under the Apache Software License version 2.0, available at http://www.apache.org/licenses/LICENSE-2.0
  ~  */
  -->

<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <parent>
        <groupId>io.debezium</groupId>
        <artifactId>debezium-build-parent</artifactId>
        <version>3.1.0.Beta1</version>
    </parent>
    <modelVersion>4.0.0</modelVersion>
    <artifactId>debezium-server-bigquery</artifactId>
    <name>Debezium Server Bigquery</name>
    <version>${revision}</version>
    <packaging>pom</packaging>

    <properties>
        <!-- NOTE: this is override by release process using CLI argument -->
        <revision>0.0.1-SNAPSHOT</revision>
        <!-- Debezium Version! NOTE: keep same as parent.version above! -->
        <version.debezium>3.1.0.Beta1</version.debezium>

        <!-- Instruct the build to use only UTF-8 encoding for source code -->
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <maven.compiler.release>17</maven.compiler.release>

        <skipITs>true</skipITs>
        <version.gcp.librariesbom>26.56.0</version.gcp.librariesbom>
        <version.gcp.bigquerybom>2.48.1</version.gcp.bigquerybom>
        <!-- Plugin versions -->
        <version.assembly.plugin>3.7.1</version.assembly.plugin>
        <version.maven-enforcer-plugin>3.5.0</version.maven-enforcer-plugin>
        <version.maven-failsafe-plugin>3.5.2</version.maven-failsafe-plugin>
        <version.maven-surefire-plugin>3.5.0</version.maven-surefire-plugin>
    </properties>
    <dependencyManagement>
        <dependencies>
            <!-- Google -->
            <dependency>
                <groupId>com.google.cloud</groupId>
                <artifactId>google-cloud-bigquery-bom</artifactId>
                <version>${version.gcp.bigquerybom}</version>
                <type>pom</type>
            </dependency>
            <dependency>
                <groupId>com.google.cloud</groupId>
                <artifactId>libraries-bom</artifactId>
                <version>${version.gcp.librariesbom}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!-- END Google -->
            <!-- debezium server -->
            <dependency>
                <groupId>io.debezium</groupId>
                <artifactId>debezium-server-bom</artifactId>
                <version>${version.debezium}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>io.debezium</groupId>
                <artifactId>debezium-bom</artifactId>
                <version>${version.debezium}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <modules>
        <module>debezium-server-bigquery-sinks</module>
        <module>debezium-server-bigquery-dist</module>
    </modules>


    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-enforcer-plugin</artifactId>
                <version>${version.maven-enforcer-plugin}</version>
                <executions>
                    <execution>
                        <id>enforce-versions</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <requireMavenVersion>
                                    <version>[3.6.3,)</version>
                                </requireMavenVersion>
                            </rules>
                        </configuration>
                    </execution>
                    <execution>
                        <id>enforce-dependencyConvergence</id>
                        <goals>
                            <goal>enforce</goal>
                        </goals>
                        <configuration>
                            <rules>
                                <DependencyConvergence/>
                            </rules>
                            <fail>false</fail>
                        </configuration>
                    </execution>
                </executions>
                <configuration>
                    <rules>
                        <requireJavaVersion>
                            <message>You are running an incompatible version of Java. Debezium Quarkus supports JDK 11
                                or
                                later.
                            </message>
                            <version>[11,)</version>
                        </requireJavaVersion>
                    </rules>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
